--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Challenge 1 - SpaceX Dashboard</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/style.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-  <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet"> <!-- Import van de font Nunito -->
+  <script src="https://cdn.zingchart.com/zingchart.min.js"></script> <!-- CDN van Zingchart -->
   <script>
    zingchart.MODULESDIR = "https://cdn.zingchart.com/modules/";
       ZC.LICENSE = ["569d52cefae586f634c54f86dc99e6a9","ee6b7db5b51705a13dc2339db3edaf6d"];
@@ -17,10 +17,10 @@
     <img src="img/logo.png">
   </div>
   <div class="flex-grid">
-    <div class="een">
-      <h2>Merlin 1</h2>
+    <div class="een"> <!-- Start: Dashboard Item 1 -->
+      <h2>Merlin 1</h2> 
       <div id="brandstof"></div>
-      <script type="text/javascript">
+      <script type="text/javascript"> 
         var chartData1 = {
             "type":"radar",
           "plot":{
@@ -66,10 +66,10 @@
             width: '100%'
           });
       </script>
-    </div>
+    </div> <!-- Einde: Dashboard Item 1 -->
 
-    <div class="een">
-      <h2>Snelheid</h2>
+    <div class="een"> <!-- Start: Dashboard Item 2 -->
+      <h2>Snelheid</h2> 
       <div id="snelheid"></div>
       <script>
         var chartData2 = {
@@ -286,9 +286,9 @@
             width: '100%'
           });
       </script>
-    </div>
+    </div> <!-- Einde: Dashboard Item 2 -->
 
-    <div class="een">
+    <div class="een"> <!-- Start: Dashboard Item 3 -->
       <h2>Locatie</h2>
       <div id="locatie"></div>
       <script>
@@ -349,10 +349,10 @@
           });
       </script>
     </div>
-  </div>
+  </div> <!-- Einde: Dashboard Item 3 -->
 
   <div class="flex-grid-twee">
-    <div class="een">
+    <div class="een"> <!-- Start: Dashboard Item 4 -->
       <h2>Zwaartekracht</h2>
       <div id="personeel"></div>
       <script>
@@ -452,9 +452,9 @@
             width: '100%'
           });
       </script>
-    </div>
+    </div> <!-- Einde: Dashboard Item 4 -->
 
-    <div class="een">
+    <div class="een"> <!-- Start: Dashboard Item 5 -->
       <h2>Voedingsmiddelen</h2>
       <div id="voedingsmiddelen"></div>
       <script>
@@ -487,7 +487,7 @@
             width: '100%'
           });
       </script>
-    </div>
+    </div> <!-- Start: Dashboard Item 5 -->
   </div>
 </body>
 </html>
