--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="nl">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Challenge 1 - SpaceX Dashboard</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/style.css" rel="stylesheet" type="text/css">
